# first-solana-app

./: Dockerfile  Makefile  README.md  docker-compose.yml  docker-sync.yml
sample/: Cargo.toml
sample/.cargo/: config
sample/src/: entrypoint.rs  lib.rs
